# bankingApp

./: .gitignore  INSTALL.md  README.md  export_zip.py  readma.txt
boekh-admin/: .env.example  .gitignore  README.md  pyproject.toml
boekh-admin/app/: __init__.py  config.py  export.py  main.py  storage_client.py  transform.py
boekh-admin/categories/: bank_categories.json
boekh-admin/frontend/: index.html  package-lock.json  package.json  vite.config.ts
boekh-admin/frontend/src/: App.tsx  api.ts  index.css  types.ts
boekh-server/: .gitignore  CLIENT_CONNECTIVITY_HANDOFF.md  README.md  pyproject.toml
boekh-server/app/: __init__.py  config.py  main.py  storage.py
boekh-server/deploy/: .env.example  DEPLOYMENT.md  Dockerfile  boekh-server.service  docker-compose.yml  install-service.ps1  run.ps1  setup-server.ps1  uninstall-service.ps1
psd2-api/: .env.example  .gitignore  CLI opdrachten.txt  README.md  pyproject.toml
psd2-api/docs/: privacy_js.html  terms_js.html
psd2-api/docs/web/: privacy.html  redirect.html  terms.html
psd2-api/packaging/: README.md  build_exe.ps1  entry.py  profile.json.example  server.json.example
psd2-api/psd2_api/: __init__.py  __main__.py  client.py  profile.py  uploader.py
single-docker/: .gitignore  Dockerfile  README.md  build_exe.ps1  build_exe.sh  docker-compose.yml  entry.py  pyproject.toml  transcript.md
single-docker/app/: __init__.py  main.py  paths.py  runtime.py  settings.py
single-docker/app/core/: __init__.py  categorize.py  server_client.py  single_client.py
single-docker/frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
single-docker/frontend/src/: App.tsx  api.ts  index.css  types.ts
single-docker/scripts/: back_conversion.py  build_exe.py  conversion.py  enablebanking_request.py  inspect_session_accounts.py  migrate_from_single_person.py
single-person/: README.md  boekh-single-person.spec  build_exe.ps1  categorize.py  entry.py  input_window.py  paths.py  pyproject.toml  single_app.py  single_client.py
single-person/both/: categories.json  categorized_transactions.json  js_categories.json
single-person/output/: category_totals.json  downloaded_transactions.json
