[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bankingApp-admin"
version = "0.1"
description = "Web-based bookkeeping app: Python/FastAPI back-end serving JSON read from a storage server to a React + TypeScript front-end"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

authors = [
  { name = "juleon", email = "j.m.schins@gmail.com" }
]

dependencies = [
  # Web API back-end (serves data to the React front-end)
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # Configuration & validation
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",

  # Reading JSON files from the (bankingApp-server) storage server
  "httpx>=0.27.0",

  # Data manipulation & representation
  "pandas>=2.3.0",
  "numpy>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",  # also used as the test client for FastAPI
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
